--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Seimo narių balsavimo statistika</title>
 
-    <!-- DataTables CSS -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+    <!-- DataTables 2 CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
 
     <style>
         body {
@@ -35,110 +35,149 @@
             padding: 10px 14px;
             border-radius: 6px;
             display: inline-block;
+            max-width: 1100px;
         }
 
-        /* Lentelės antraštės – rodo, kad galima spausti */
+        /* Stulpelių antraštės – rodo, kad galima spausti */
         #balsavimai thead th {
             white-space: nowrap;
             cursor: pointer;
             position: relative;
-            padding-right: 14px !important;
+            padding-right: 16px;
         }
 
-        /* Dvipusė rodyklė */
+        /* Maža dvipusė rodyklė prie pavadinimo */
         #balsavimai thead th::after {
             content: "⇅";
             font-size: 0.7rem;
             opacity: 0.25;
-            margin-left: 5px;
+            margin-left: 4px;
             position: absolute;
             right: 6px;
             top: 50%;
             transform: translateY(-50%);
         }
 
-        /* Užvedus – ryškesnė */
         #balsavimai thead th:hover::after {
             opacity: 0.7;
         }
     </style>
-
 </head>
 <body>
 
-    <h1>Seimo narių balsavimo statistika</h1>
-    <p class="subtitle">Laikotarpis: 2024-11-14 – 2025-11-14</p>
+<h1>Seimo narių balsavimo statistika</h1>
+<p class="subtitle">Laikotarpis: 2024-11-14 – 2025-11-14</p>
 
-    <p class="hint">
-        Patarimas: norėdami patogiai peržiūrėti duomenis, spauskite ant stulpelių pavadinimų 
-        („Nedalyvavo“, „Prieš“, „Už“, „Susilaikė“, „Registravosi“, „Už A“, „Už B“) – 
-        lentelė bus automatiškai surikiuota pagal pasirinktą pjūvį.
-    </p>
+<p class="hint">
+    Patarimas: norėdami patogiai peržiūrėti duomenis, spauskite ant stulpelių pavadinimų 
+    („Nedalyvavo“, „Prieš“, „Už“, „Susilaikė“, „Registravosi“, „Už A“, „Už B“). 
+    Lentelė iškart bus surikiuota pagal pasirinktą pjūvį – taip lengviau matyti, kas daugiausiai nedalyvavo,
+    balsavo prieš ar susilaikė.
+</p>
 
-    <!-- Lentelė -->
-    <table id="balsavimai" class="display" style="width:100%">
-        <thead>
-            <tr>
-                <th>Eil. Nr.</th>
-                <th>Seimo narys</th>
-                <th>Nedalyvavo</th>
-                <th>Prieš</th>
-                <th>Už</th>
-                <th>Susilaikė</th>
-                <th>Registravosi</th>
-                <th>Už A</th>
-                <th>Už B</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+<table id="balsavimai" class="display" style="width:100%">
+    <thead>
+        <tr>
+            <th>Eil. Nr.</th>
+            <th>Seimo narys</th>
+            <th>Nedalyvavo</th>
+            <th>Prieš</th>
+            <th>Už</th>
+            <th>Susilaikė</th>
+            <th>Registravosi</th>
+            <th>Už A</th>
+            <th>Už B</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
 
-    <!-- JS bibliotekos -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+<!-- Bibliotekos: DataTables v2 ir PapaParse -->
+<script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
-    <script>
-        $(document).ready(function() {
+<script>
+document.addEventListener("DOMContentLoaded", function() {
 
-            // Įkeliame CSV failą
-            $.get("metu_balsavimas1.csv", function(data) {
+    Papa.parse("metu balsavimas1.csv", {   // FAILO PAVADINIMAS SU TARPU
+        download: true,
+        delimiter: ";",                   // KABLIATAŠKIS – kaip tavo faile
+        skipEmptyLines: true,
+        complete: function(results) {
 
-                // Suskaidome CSV
-                const rows = data.split("\n").map(r => r.split(","));
+            var rows = results.data;
+            var data = [];
 
-                // Išvalome lentelę
-                let tbody = "";
+            // Pirmos 3 eilutės – antraštės/komentarai, tikri duomenys nuo 4-os eilutės
+            for (var i = 3; i < rows.length; i++) {
+                var r = rows[i];
+                if (!r || r.length < 9) continue;
 
-                for (let i = 1; i < rows.length; i++) {
-                    const r = rows[i];
-                    if (r.length < 9) continue;
+                // CSV stulpelių indeksai:
+                // 0 - Eil. Nr. (IGNORUOJAM)
+                // 1 - Seimo narys
+                // 2 - Nedalyvavo
+                // 3 - Prieš
+                // 4 - Už
+                // 5 - Susilaikė
+                // 6 - Registravosi
+                // 7 - Už A
+                // 8 - Už B
 
-                    tbody += "<tr>";
-                    for (let j = 0; j < 9; j++) {
-                        tbody += "<td>" + r[j].trim() + "</td>";
-                    }
-                    tbody += "</tr>";
-                }
+                data.push([
+                    r[1],                      // 0: Seimo narys
+                    parseInt(r[2] || "0", 10), // 1: Nedalyvavo
+                    parseInt(r[3] || "0", 10), // 2: Prieš
+                    parseInt(r[4] || "0", 10), // 3: Už
+                    parseInt(r[5] || "0", 10), // 4: Susilaikė
+                    parseInt(r[6] || "0", 10), // 5: Registravosi
+                    parseInt(r[7] || "0", 10), // 6: Už A
+                    parseInt(r[8] || "0", 10)  // 7: Už B
+                ]);
+            }
 
-                $("#balsavimai tbody").html(tbody);
-
-                // Paleidžiame DataTable
-                $("#balsavimai").DataTable({
-                    paging: true,
-                    pageLength: 25,
-                    order: [[1, "asc"]],   // rūšiavimas pagal vardus PRADŽIOJE
-                    language: {
-                        url: "https://cdn.datatables.net/plug-ins/1.13.6/i18n/lt.json"
+            var table = new DataTable("#balsavimai", {
+                data: data,
+                columns: [
+                    {   // Eil. Nr. – tuščias, pildysim draw įvykyje
+                        data: null,
+                        searchable: false,
+                        orderable: false,
+                        defaultContent: ""
                     },
-                    columnDefs: [
-                        { orderable: false, targets: 0 } // Eil. Nr. NERŪŠIUOJAMAS
-                    ]
-                });
-
+                    { data: 0 }, // Seimo narys
+                    { data: 1 }, // Nedalyvavo
+                    { data: 2 }, // Prieš
+                    { data: 3 }, // Už
+                    { data: 4 }, // Susilaikė
+                    { data: 5 }, // Registravosi
+                    { data: 6 }, // Už A
+                    { data: 7 }  // Už B
+                ],
+                order: [[1, "asc"]],             // pradinis rikiavimas – abėcėle
+                pageLength: 25,
+                lengthMenu: [[10, 25, 50, 141, -1], [10, 25, 50, 141, "Visi"]],
+                language: {
+                    url: "https://cdn.datatables.net/plug-ins/2.1.8/i18n/lt.json"
+                }
             });
 
-        });
-    </script>
+            // Kiekvieną kartą, kai lentelė perpiešiama (rūšiavimas, filtravimas, puslapiai),
+            // perrašome pirmą stulpelį pastovia numeracija 1,2,3...
+            table.on('draw', function () {
+                var info = table.page.info();
+                table.column(0, { page: 'current' }).nodes().each(function (cell, i) {
+                    cell.innerHTML = info.start + i + 1;
+                });
+            });
+
+            // Iškart po užkrovimo – pirmas numeracijos uždėjimas
+            table.draw();
+        }
+    });
+
+});
+</script>
 
 </body>
 </html>
