--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <script>
 document.addEventListener("DOMContentLoaded", function() {
 
-    Papa.parse("metu balsavimas1.csv", {   // FAILO PAVADINIMAS SU TARPU
+    Papa.parse("metu_balsavimas1.csv", {   // FAILO PAVADINIMAS SU TARPU
         download: true,
         delimiter: ";",                   // KABLIATAŠKIS – kaip tavo faile
         skipEmptyLines: true,
